MessageChannel::port1() / port2() should return references instead of pointers https://bugs.webkit.org/show_bug.cgi?id=233772

Reviewed by Alex Christensen.

This was extracted from Alex Christensen's large patch at Bug 230382.

* Modules/webaudio/AudioWorkletNode.cpp:
(WebCore::AudioWorkletNode::create):
* bindings/js/JSMessageChannelCustom.cpp:
(WebCore::JSMessageChannel::visitAdditionalChildren):
* dom/MessageChannel.cpp:
(WebCore::generateMessagePorts):
(WebCore::MessageChannel::MessageChannel):
* dom/MessageChannel.h:
(WebCore::MessageChannel::port1 const):
(WebCore::MessageChannel::port2 const):



Canonical link: https://commits.webkit.org/244795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286453 268f45cc-cd09-0410-ab3c-d52691b4dbfc